--- a/apache.yml
+++ b/apache.yml
@@ -6,6 +6,10 @@
     yum:
       name: httpd
       state: present
+  - name: copying the index.html
+    copy:
+      src: index.html
+      dest: /var/www/html/
   - name: Starting Apache
     service:
       name: httpd
